<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">co8</string>
    <string name="title_tab_diary">WorkSpace</string>
    <string name="title_tab_chat">Messages</string>
    <string name="title_tab_event">Meetings</string>
    <string name="title_tab_more">More</string>
    <string name="title_event_detail">Meeting</string>
    <string name="title_diary_comment">Comments</string>
    <string name="title_event_new">New Meeting</string>
    <string name="title_event_edit">Edit meeting</string>
    <string name="title_diary_new">Write a Post</string>
    <string name="title_map_choose_location">Location</string>
    <string name="title_invited_status">Invited Contacts</string>
    <string name="title_birthday_title">%1$s%2$s birthday is coming !</string>
    <string name="title_birthday_title_prefix1">&#160;%s contacts\'&#160;</string>
    <string name="title_birthday_title_prefix2">\'s</string>
    <string name="title_birthday_left_day_desc"> days left</string>
    <string name="text_hint_event_title">Name</string>
    <string name="text_hint_event_content">Meeting content</string>
    <string name="text_hint_event_position">Meeting location</string>
    <string name="text_hint_event_date">Start Date &amp; Time</string>
    <string name="text_canceled">Cancelled</string>
    <string name="msg_action_successed">Action successful</string>
    <string name="msg_action_canceled">Action Cancelled</string>
    <string name="msg_action_failed">Action failed</string>
    <string name="msg_no_content">Write something to post.</string>
    <string name="msg_no_internet">Poor Internet Connection</string>
    <string name="msg_load_config_successed">Loaded successfully</string>
    <string name="msg_load_config_failed">Loading failed</string>
    <string name="msg_date_not_befort_now">Set a later time.</string>
    <string name="draft_ask_save">Do you want to save as draft?</string>
    <string name="event_accept">YES</string>
    <string name="event_cancel">No</string>
    <string name="text_tips_title">Tips</string>
    <string name="alert_text_title_null">Choose a great name for your meeting.</string>
    <string name="alert_text_desc_null">What\'s your meeting about?</string>
    <string name="alert_text_location_null">Where\'s the location?</string>
    <string name="alert_text_date_null">What\'s the date and time?</string>
    <string name="title_message_creategroup">New Group</string>
    <string name="alert_comment_del">Are you sure you want to delete this?</string>
    <string name="alert_diary_del">Are you sure you want to delete this post?</string>
    <string name="alert_diary_del_photo">Delete this photo?</string>
    <string name="text_word">Text</string>
    <string name="text_photo">Photo</string>
    <string name="text_invited_members">Invited Contacts</string>
    <string name="text_all">All</string>
    <string name="text_going">Joining</string>
    <string name="text_maybe">Maybe</string>
    <string name="text_not_going">Not Going</string>
    <string name="text_add">Add</string>
    <string name="text_added">Added</string>
    <string name="text_updated">Updated</string>
    <string name="text_awaiting">Pending</string>
    <string name="text_private">Private</string>
    <string name="text_like_desc"></string>
    <string name="text_ask_delete">Are you sure you want to remove this contact?</string>
    <string name="text_comments">Comments</string>
    <string name="text_diary_content_at_member_desc">\@%1$scontacts</string>
    <string name="text_diary_content_at_group_desc">\@%1$sgroups</string>
    <string name="text_today">today</string>
    <string name="google_map_pic_size">640x640</string>
    <string name="text_send">Send</string>
    <string name="title_pick_date_time">Meeting date &amp; time</string>
    <string name="text_dialog_accept">Accept</string>
    <string name="ok">OK</string>
    <string name="text_dialog_cancel">Cancel</string>
    <string name="msg_ask_save">Do you want to save as draft?</string>
    <string name="text_about_desc1">co8 enables you and your work communities to connect and collaborate anytime and anywhere. Collaboration made simple for a better and more effective team communication.\n\nContact: support@co8app.com\nWebsite: www.co8app.com</string>
    <string name="text_about_desc2"></string>
    <string name="text_about_desc3"></string>
    <string name="msg_ask_exit_app">Do you really want to log out?</string>
    <string name="text_yes">YES</string>
    <string name="text_camera">Camera</string>
    <string name="text_album">Album</string>
    <string name="hint_search_name">Search by name</string>
    <string name="alert_text_mail_info_not_complete">Please complete all the required fields</string>
    <string name="mail_subject_1">General Inquiry</string>
    <string name="mail_subject_2">Suggestion &amp; Feedback</string>
    <string name="mail_subject_3">Report a Problem</string>
    <string name="text_search_contact">Search here</string>
    <string name="text_relationship">Relationship</string>
    <string name="msg_no_contact_select">Please select at least 1 contact.</string>
    <string name="text_via_contact">Via Contact</string>
    <string name="text_ID_name">Via co8 ID / Username</string>
    <string name="text_QR">Add via QR Code</string>
    <string name="text_location">Location</string>
    <string name="text_stickers">Stickies</string>
    <string name="text_video">Video</string>
    <string name="text_contact">Contacts</string>
    <string name="text_done">Done</string>
    <string name="text_id">ID</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_gender">Gender</string>
    <string name="text_email">Email</string>
    <string name="text_region">Location</string>
    <string name="text_group_name">Group Name</string>
    <string name="text_members">Contacts</string>
    <string name="text_leave_group">Leave Group</string>
    <string name="text_my_view_profile">Profile</string>
    <string name="text_album_gallery">Album</string>
    <string name="text_diary_posting">WorkSpace</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_wrong_password">Invalid password. Please try again.</string>
    <string name="text_back">Back</string>
    <string name="text_old_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_re_enter_password">Re-enter Password</string>
    <string name="text_select_contact">Select Contact</string>
    <string name="text_select_relationship">Select Relationship</string>
    <string name="text_warning_invaild_id_name">Invaild ID/ username, please try again.</string>
    <string name="hint_id_accout">Enter ID / username.</string>
    <string name="text_remove_user">Remove Contact</string>
    <string name="text_add_member">Add Contact</string>
    <string name="text_view_profile">View Contact\'s Profile</string>
    <string name="text_message_user">Message Contact</string>
    <string name="text_add_new_member">Add New Contact</string>
    <string name="text_create_new_group">Create New Group</string>
    <string name="text_i_miss_you">Good Job !</string>
    <string name="text_path_relationship"><![CDATA[Path & Relationship]]></string>
    <string name="text_send_message">Send Message</string>
    <string name="title_add_new_members">Add New Contacts</string>
    <string name="title_album_gallery">Album Gallery</string>
    <string name="title_group_setting">Group Settings</string>
    <string name="title_group_info">Group Info</string>
    <string name="title_me">Me</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_path_relationship">Path &amp; Relationship</string>
    <string name="text_no_album_gallery">No album gallery</string>
    <string name="text_success">Action successful</string>
    <string name="text_error">Action failed</string>
    <string name="text_error_try_again">Action failed</string>
    <string name="text_dialog_loading">loading&#8230;</string>
    <string name="text_input_your_group_name">Input group name.</string>
    <string name="text_no_found_reduce">Crop feature is not supported.</string>
    <string name="text_choose_your_group_picture">Group Photo</string>
    <string name="text_fail_to_create_group">Fail to create group, please try again.</string>
    <string name="text_fail_upload_group_profile_phone">Upload failed. Please try again.</string>
    <string name="text_success_upload_group_profile_phone">Successfully uploaded group photo</string>
    <string name="text_success_update_group_name">Group name updated successfully.</string>
    <string name="text_fail_update_group_name">Update failed. Please try again.</string>
    <string name="text_success_remove">Remove contact successfully</string>
    <string name="text_fail_remove">Fail to remove contact. Please try again.</string>
    <string name="text_leave_group_sure">Are you sure you want to leave group?</string>
    <string name="text_dialog_yes">Yes</string>
    <string name="text_success_leave_group">We\'re sad to see you go. Goodbye!</string>
    <string name="text_fail_leave_group">Failed to leave group. Please try again.</string>
    <string name="text_success_resend">Resent Successfully!</string>
    <string name="text_success_request">Request sent successfully!</string>
    <string name="text_success_accept">Contact added successfully!</string>
    <string name="text_success_set_relationship">Relationship added successfully!</string>
    <string name="text_no_network">Poor Internet Connection</string>
    <string name="text_successfully_dismiss_miss">Good Job!</string>
    <string name="text_fail_update_information">Failed to update your information. Please try again.</string>
    <string name="text_success_update_information">Successfully updated your information.</string>
    <string name="text_update_proPicFail">Action failed</string>
    <string name="text_updateProPicSuccess">Action Successful</string>
    <string name="text_wrong_data">Birthday should NOT be a future date</string>
    <string name="text_start_least5_prompt">At least 5 alphanumberic characters</string>
    <string name="text_start_next">Next</string>
    <string name="text_start_new_password">New Password</string>
    <string name="text_start_re_enter_password">Re-enter New Password</string>
    <string name="text_start_thank_you">Thank you for signing up!</string>
    <string name="text_start_welcome">Welcome aboard and start connecting!</string>
    <string name="text_start_start_using">Start Using!</string>
    <string name="text_start_cancle">Cancel</string>
    <string name="text_tag">Tag</string>
    <string name="text_feeling">Feeling</string>
    <string name="text_close_update_sticker">Close</string>
    <string name="text_sticker_update_now">Update Now!</string>
    <string name="text_sticker_update_detail">Stickers Store Update Available</string>
    <string name="add_photo_to_this_post">Add Photo to this Post</string>
    <string name="save_all_photos">Save All Photos</string>
    <string name="edit_this_post">Edit this Post</string>
    <string name="delete_this_post">Delete this Post</string>
    <string name="text_wall_view_pic_save">Save this Photo</string>
    <string name="text_wall_view_pic_edit">Edit this caption</string>
    <string name="text_wall_view_pic_delete">Delete this Photo</string>
    <string name="text_only_me">Me Only</string>
    <string name="text_all_member">Everyone</string>
    <string name="text_orgin_workspace">All Staff</string>
    <string name="text_org_resend_request">Resend Request</string>
    <string name="text_org_cancel_request">Cancel Request</string>
</resources>