<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save_all_photos"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="80"
        android:title="@string/add_photo_to_this_post" />

    <item
        android:id="@+id/menu_setting_gps"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="90"
        android:title="@string/save_all_photos" />
    <item
        android:id="@+id/menu_edit_this_post"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="91"
        android:title="@string/edit_this_post"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_this_post"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="91"
        android:title="@string/delete_this_post"
        app:showAsAction="never" />
</menu>
