<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save_photos"
        android:icon="@drawable/option_save_all_photo"
        android:orderInCategory="90"
        android:title="@string/text_wall_view_pic_save" />
    <item
        android:id="@+id/menu_edit_this_post"
        android:icon="@drawable/option_edit_this_post"
        android:orderInCategory="91"
        android:title="@string/text_wall_view_pic_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_this_post"
        android:icon="@drawable/option_delete_this_post"
        android:orderInCategory="91"
        android:title="@string/text_wall_view_pic_delete"
        app:showAsAction="never" />
</menu>
