<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_text_color_while"
    tools:context="com.bondwithme.BondCorp.ui.start.ResetPasswordActivity">

    <include
        android:id="@+id/fragment_main_top"
        layout="@layout/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:layout_below="@+id/fragment_main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
            <EditText
                style="@style/et_start_password"
                android:id="@+id/et_first_pw"
                android:hint="@string/text_start_new_password"
                 />

            <EditText
                style="@style/et_start_password"
                android:id="@+id/et_second_pw"
                android:imeOptions="actionDone"
                android:layout_marginTop="@dimen/default_content_padding"
                android:hint="@string/text_start_re_enter_password"
                />

            <TextView
                style="@style/tv_start_light_small"
                android:id="@+id/tv_password_prompt"
                android:text="@string/text_start_least5_prompt"
                android:layout_marginLeft="@dimen/default_content_padding"
                android:paddingLeft="@dimen/default_content_padding"
                android:layout_marginTop="@dimen/default_view_margin"
                />

    </LinearLayout>


    <com.material.widget.PaperButton
        android:id="@+id/br_next"
        android:layout_width="match_parent"
        style="@style/paper_button_style"
        app:paper_text="@string/text_start_next"
        app:paper_color="@color/btn_bg_color_green_normal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/default_content_padding"
        android:layout_marginLeft="@dimen/default_view_margin"
        android:layout_marginRight="@dimen/default_view_margin"
        />

    <include layout="@layout/progress_layout"/>

</RelativeLayout>
