<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sticker_new_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e01C242B"
    android:visibility="visible">

    <TextView
        android:id="@+id/sticker_store_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_stroke_sticker_store"
        android:paddingBottom="@dimen/_10dp"
        android:paddingLeft="@dimen/_15dp"
        android:paddingRight="@dimen/_15dp"
        android:paddingTop="@dimen/_10dp"
        android:text="@string/text_sticker_update_now"
        android:textColor="#ffffff"
        android:textSize="@dimen/_22dp" />

    <TextView
        android:layout_width="@dimen/_150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/sticker_store_update"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/text_sticker_update_detail"
        android:textColor="#ffffff"
        android:textSize="@dimen/_18dp" />

    <TextView
        android:id="@+id/sticker_store_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="@drawable/bg_stroke_sticker_store"
        android:gravity="bottom"
        android:padding="@dimen/_8dp"
        android:text="@string/text_close_update_sticker"
        android:textColor="#ffffff"
        android:textSize="@dimen/_20dp" />
</RelativeLayout>