<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_post_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/option_bar"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/option_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_white_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_user_head_width_height"
            android:layout_marginTop="@dimen/default_view_margin"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_10dp"
            android:drawableTop="@drawable/action_camera"
            android:gravity="center"
            android:text="@string/text_camera"
            android:textColor="@color/default_text_color_dark"
            android:textSize="@dimen/text_medium_size" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_user_head_width_height"
            android:layout_marginTop="@dimen/default_view_margin"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_10dp"
            android:drawableTop="@drawable/action_tag"
            android:gravity="center"
            android:text="@string/text_tag"
            android:textColor="@color/default_text_color_dark"
            android:textSize="@dimen/text_medium_size" />

        <TextView
            android:id="@+id/tv_feeling"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_user_head_width_height"
            android:layout_marginTop="@dimen/default_view_margin"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_10dp"
            android:drawableTop="@drawable/action_feeling"
            android:gravity="center"
            android:text="@string/text_feeling"
            android:textColor="@color/default_text_color_dark"
            android:textSize="@dimen/text_medium_size" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_user_head_width_height"
            android:layout_marginTop="@dimen/default_view_margin"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_10dp"
            android:drawableTop="@drawable/action_location"
            android:gravity="center"
            android:text="@string/text_location"
            android:textColor="@color/default_text_color_dark"
            android:textSize="@dimen/text_medium_size" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_user_head_width_height"
            android:layout_marginTop="@dimen/default_view_margin"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_10dp"
            android:drawableTop="@drawable/privacy_lock"
            android:gravity="center"
            android:text="@string/text_private"
            android:textColor="@color/default_text_color_dark"
            android:textSize="@dimen/text_medium_size" />
    </LinearLayout>

    <include layout="@layout/progress_layout" />

</RelativeLayout>