<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/btn_gradient_color_green_normal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.bondwithme.BondWithMe.ui.start.SignUpSuccessfulActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:layout_gravity="bottom"
                android:text="@string/text_start_thank_you"
                android:textColor="@color/default_text_color_while"
                android:textSize="@dimen/_45dp"
                android:textStyle="normal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:textSize="@dimen/_45dp"
                    android:textStyle="normal"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:textColor="@color/default_text_color_while"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/text_start_welcome"/>
        </LinearLayout>


        <TextView
            style="@style/tv_btn_start_white"
            android:id="@+id/tv_start_using"
            android:text="@string/text_start_start_using"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

</LinearLayout>
